force-app/main/default/Objects/Campaign_Member_Communication__c/Campaign_Member_Communication__c.object-meta.xml
<CustomObject>
    <description>All sales funnel communications to be done for campaign member.  Information is based on Sales Funnel Steps data.</description>
    <label>Campaign Member Communication</label>
    <nameField>
        <displayFormat>CMCommID{YYYY}{MM}{DD}{00}</displayFormat>
        <label>CMComm ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>