force-app/main/default/Objects/Campaign_Member_Communication__c/fields/Automatic__c.field-meta.xml
<CustomField>
    <fullName>Automatic__c</fullName>
    <description>Indicates if the communication is automatically sent or if a task is created and assigned to someone to do</description>
    <inlineHelpText>Indicates if the communication is automatically sent or if a task is created and assigned to someone to do</inlineHelpText>
    <label>Automatic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>