force-app/main/default/Objects/Campaign_Member_Communication__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign for which communication is sent</description>
    <inlineHelpText>Campaign for which communication is sent</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Member Communications</relationshipLabel>
    <relationshipName>Campaign_Member_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>