force-app/main/default/Objects/Campaign_Member_Communication__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person with whom we are communicating</description>
    <inlineHelpText>Person with whom we are communicating</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Member Communications</relationshipLabel>
    <relationshipName>Campaign_Member_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>