force-app/main/default/Objects/Campaign_Member_Communication__c/fields/Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Processed__c</fullName>
    <description>Date/time record was processed</description>
    <inlineHelpText>Date/time record was processed</inlineHelpText>
    <label>Date Processed</label>
    <type>DateTime</type>
</CustomField>