force-app/main/default/Objects/Campaign_Member_Communication__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date record needs to be processed</description>
    <inlineHelpText>Date record needs to be processed</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>