force-app/main/default/Objects/Campaign_Member_Communication__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <description>Unique identifier for an email or texting template</description>
    <inlineHelpText>Unique identifier for an email or texting template</inlineHelpText>
    <label>Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>