force-app/main/default/Objects/Campaign_Member_Communication__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of communication</description>
    <inlineHelpText>Type of communication</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Texting</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>