force-app/main/default/Objects/Campaign_Member_Communication__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>General type of communication</description>
    <label>General</label>
</RecordType>